# M.A.R.I.A.-Micro-Engine

./: .env.example  .gitattributes  .gitignore  CHARACTER_PACK_SPEC.md  CONTRIBUTING.md  Makefile  README.md  SUBMISSION_TERMS.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  submit-a-character.yml
.github/workflows/: ci.yml
app/: __init__.py  contracts.py  deps.py  main.py  scenes.py  service.py  sessions.py
characters/alex/: README.md  pack.yaml
characters/aria/: pack.yaml
docs/: API.md  ARCHITECTURE.md  DESIGN_v0.2_SCENES.md  EXAMPLE_RUN.md  START_HERE.md  example_scene_3_days_before.txt  example_showcase_alex.txt  example_showcase_kaguya.txt  example_showcase_megumin.txt
engine/: __init__.py  character.py  config.py  llm.py  logging_config.py  perception.py  prompt_manager.py  registry.py  state.py  textjson.py  vision.py
engine/io/: __init__.py  (+1 more)
gallery/: README.md
tests/: _packs.py  conftest.py  test_api_chat.py  test_api_scenes.py  test_api_shell.py  test_backend_selection.py  test_character.py  test_director.py  test_json_store.py  test_llm_client.py  test_openai_client.py  test_pack_loader.py  test_perception.py  test_prompt_fragment_registry.py  test_prompt_manager.py  test_relationship_matrix.py  test_sample_packs.py  test_scene_pack.py  test_scene_runtime.py  test_sessions.py  test_state.py  test_textjson.py  test_vector_store.py  test_vision_backdrop.py  test_web_search.py
tools/: check.bat  run_scenario.py  scenarios.py  scene_scripts.py
web/: app.js  index.html  styles.css
(+33 files in other folders)
